--- a/style.css
+++ b/style.css
@@ -39,13 +39,18 @@ body {
     padding-top: 10px;;
   }
   
+  #js-todo-list{
+    padding-left: 0px;
+  }
+  
   .todo-item {
     margin-bottom: 10px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 27px;
+    font-size: 37px;
+    padding-left: opx;
   }
 
   input[type="checkbox"] {
