--- a/style.css
+++ b/style.css
@@ -1,95 +1,100 @@
 body {
   font-family:
-  -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
-   Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
+    Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   line-height: 1.4;
- }
- 
-  
-  .container {
-    width: 100%;
-    max-width: 500px;
-    margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #333;
-    height: 90vh;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-  }
-  
-  .app-title {
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 40px;
-    font-size: 50px;
-    font-family: Helvetica;
-    font-weight: 600;
-    opacity: 0.8;
-  }
-  
-  svg {
-    width: 64px;
-    height: 64px;
-  }
-  
-  .todo-list {
-    list-style: none;
-    margin-bottom: 20px;
-    padding-top: 10px;;
-  }
-  #js-form{
-    margin-top: 60px;
-  }
-  #js-todo-list{
-    padding-left: 0px;
-    
-  }
-  
-  .todo-item {
-    margin-bottom: 10px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 37px;
-    padding-left: opx;
-  }
+}
 
-  input[type="checkbox"] {
-    display: none;
-  }
-  
-  .delete-todo {
-    border: none;
-    background-color: white;
-    outline: none;
-    cursor: pointer;
-    
-    display: inline;
-  }
-  
-  .delete-todo svg {
-    width: 30px;
-    height: 30px;
-    pointer-events: none;
-    
-  }
-  
-  form {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-    border: 3px solid #333;
-  }
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+
+.container {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #333;
+  height: 90vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+.app-title {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  font-size: 50px;
+  font-family: Helvetica;
+  font-weight: 600;
+  opacity: 0.8;
+}
+
+svg {
+  width: 64px;
+  height: 64px;
+}
+
+.todo-list {
+  list-style: none;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  ;
+}
+
+#form {
+  margin-top: 60px;
+}
+
+#todo-list {
+  padding-left: 0px;
+
+}
+
+.todo-item {
+  margin-bottom: 10px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 37px;
+  padding-left: opx;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.delete-todo {
+  border: none;
+  outline: none;
+  cursor: pointer;
+
+  display: inline;
+}
+
+.deleteButton {
+  border-radius: 40%;
+  background-color: #df392e;
+  padding: 3px 8px 3px 8px;
+  color: #fff;
+  font-size: .7em;
+  border-color: #df392e;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  border: 3px solid #333;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
